# ElevatorSystemDDL

./: CMakeLists.txt  ElevatorSystemDDL.sln  README.md
ElevatorSystemDDL/: Algorytm.cpp  Algorytm.h  DataManagement.cpp  DataManagement.h  DispatcherUnit.cpp  DispatcherUnit.h  Display.cpp  ElevatorCar.cpp  ElevatorCar.h  ElevatorSystemDDL.vcxproj  ElevatorSystemDDL.vcxproj.filters  Enquiries.csv  Floor.cpp  Floor.h  Menu.cpp  Menu.h  SimulationTime.cpp  TODO.txt  Zapytania.cpp  Zapytania.h
ElevatorSystemDDL/Header Files/: Algorytm.h  AlgorytmData.h  DataManagement.h  DispatcherUnit.h  ElevatorCar.h  GlobalVariables.h  Menu.h  Zapytania.h
ElevatorSystemDDL/Program Debug/: AlgorithmData.csv  DNASample.csv  Enquiries.csv
ElevatorSystemDDL/Resource Files/: TODO.txt
ElevatorSystemDDL/Source Files/: Algorytm.cpp  AlgorytmData.cpp  DataManagement.cpp  DispatcherUnit.cpp  ElevatorCar.cpp  Floor.cpp  Menu.cpp  Zapytania.cpp
Header Files/: Algorytm.h  DataManagement.h  DispatcherUnit.h  Floor.h  Menu.h  PlatformUtils.h  SimulationTime.h
Program Debug/: AlgorithmData.csv  DNA.csv  Enquiries.csv
Resource Files/: TODO.txt
Source Files/: Algorytm.cpp  DataManagement.cpp  DispatcherUnit.cpp  Display.cpp  ElevatorCar.cpp  Floor.cpp  Menu.cpp  PlatformUtils.cpp  Zapytania.cpp
